--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Task Manager</title>
 	<link rel="icon" href="/favicon.ico" />
+	<script>
+		if (localStorage.getItem("theme") === "dark") {
+			document.documentElement.classList.add("theme-dark");
+		}
+	</script>
 </head>
 <body>
 	<div id="root"></div>
